# Torch-Candle

./: .gitignore  .pyre_configuration  .pyrightconfig.json  LICENSE  pyproject.toml
examples/: check_cnn.py
rust/: Cargo.toml
rust/src/: kernels.rs  lib.rs  simd.rs
scripts/: check_api_coverage.py
src/torch_candle/: __init__.py  autograd.py  cuda.py  device.py  ops.py  quantization.py  tensor.py
src/torch_candle/amp/: __init__.py
src/torch_candle/distributions/: __init__.py
src/torch_candle/fft/: __init__.py
src/torch_candle/linalg/: __init__.py
src/torch_candle/nn/: __init__.py  activations.py  container.py  conv.py  dropout.py  functional.py  init.py  linear.py  loss.py  module.py  parameter.py  pooling.py
src/torch_candle/nn/modules/: normalization.py  rnn.py  sparse.py
src/torch_candle/optim/: __init__.py  adagrad.py  adam.py  adamax.py  lr_scheduler.py  nadam.py  optimizer.py  radam.py  rmsprop.py  sgd.py
src/torch_candle/utils/data/: __init__.py  dataloader.py  dataset.py
tests/: test_activations.py  test_amp.py  test_autograd.py  test_distributions.py  test_edge_cases.py  test_fft.py  test_linalg.py  test_nn.py  test_nn_functional.py  test_ops.py  test_optim.py  test_tensor.py  test_utils_data.py
