[project]
name = "torch_candle"
version = "0.1.0"
description = "A PyTorch-compatible API with Candle backend"
authors = [
    { name = "Antigravity", email = "antigravity@example.com" }
]
dependencies = [
    "numpy",
    "pytest>=8.3.5",
]
requires-python = ">=3.8, <3.13"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "torch_candle_backend"
working-directory = "rust"
