[package]
name = "torch_candle_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "torch_candle_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
numpy = "0.22.0"
ndarray = "0.16.1"
rayon = "1.10.0"
cfg-if = "1.0.0"
candle-core = "0.8.2"
candle-nn = "0.8.2"
parking_lot = "0.12.3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
